aggiunta vini e spedizioni attive

--- a/delivery.html
+++ b/delivery.html
@@ -114,11 +114,7 @@
 							<div class="home_subtitle page_subtitle"><img class ="main-logo" src="./images/logo2-bianco.png" alt=""></div>
 							<div class="home_title"><h1>Estimados clientes,</h1></div>
 							<div class="home_text ml-auto mr-auto">
-								<p>Les informamos que actualmente nuestro servicio de delivery no está disponible. Sin embargo, estamos trabajando arduamente para ponerlo a su disposición lo antes posible y ofrecerles la mejor experiencia de entrega a domicilio.
-
-                                    Agradecemos su paciencia y los invitamos a seguir nuestro sitio web para futuras actualizaciones sobre nuestro servicio de delivery. Mientras tanto, estaremos encantados de darles la bienvenida en nuestro restaurante para que disfruten de nuestros deliciosos platos.
-                                    
-                                    Gracias por su comprensión y fidelidad a nuestro restaurante.</p>
+								<p>Estamos emocionados de anunciar oficialmente el lanzamiento de nuestro nuevo y esperado servicio de entrega a domicilio. A partir de hoy, podrás disfrutar de nuestra exquisita cocina en la comodidad de tu hogar, gracias a nuestra amplia selección de platos que llegarán directamente a tu mesa. Simplemente visita nuestro sitio web o utiliza nuestra aplicación dedicada para explorar el menú y ordenar tus platillos favoritos con solo unos clics.</p>
 							</div>
 						</div>
 					</div>
@@ -138,7 +134,7 @@
 						<div class="intro_subtitle page_subtitle">Algo nuevo</div>
 						<div class="intro_title"><h2>Una experiencia extraordinaria...</h2></div>
 						<div class="intro_text">
-							<p>... te espera en nuestro restaurante ítalo-español. Combinando las ricas y sabrosas tradiciones culinarias de Italia y España, nuestro restaurante ofrece una experiencia gastronómica verdaderamente única. Desde platos italianos clásicos como... hasta especialidades españolas como..., nuestro menú es una celebración de los sabores vibrantes y diversos del Mediterráneo. Nuestros expertos chefs utilizan solo los ingredientes más frescos y de la más alta calidad para crear cada plato, asegurándose de que cada bocado sea una explosión tentadora de sabor. Ya sea que busques una noche romántica o una reunión animada con amigos y familiares, nuestro restaurante brinda el ambiente perfecto para cualquier ocasión. Únete a nosotros y date un gusto en una experiencia gastronómica inolvidable que te transportará directamente al corazón de Italia y España.</p>
+							<p>Estamos encantados de presentarte nuestro exclusivo servicio de entrega a domicilio, llevando el distintivo sabor de nuestro restaurante directamente a tu casa. Con una amplia selección de platos expertamente preparados, desde nuestra cocina hasta tu mesa, garantizamos una experiencia culinaria sin igual. Ordenar es fácil y rápido a través de nuestro sitio web o la aplicación dedicada, y tu deliciosa experiencia será entregada con cuidado y puntualidad. La calidad es nuestra firma, y cada bocado refleja nuestro compromiso con ingredientes frescos y auténticas tradiciones culinarias. Tu seguridad es nuestra prioridad, con estrictos estándares de higiene garantizados en cada fase del proceso. Deja que A Casa Di Marco transforme cada comida en una experiencia extraordinaria, llevando el sabor sin límites directamente a tu puerta.</p>
 						</div>
 					</div>
 					<div class="row">
