--- a/menu.html
+++ b/menu.html
@@ -1021,14 +1021,6 @@
                            <!-- Dish -->
                            <div class="dish">
                               <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
-                                 <div class="dish_title">LAMBRUSCO TINTO Y BLANCO</div>
-                                 <div class="dish_price">3.9€ - 23.0€</div>
-                              </div>
-                              <!-- <div class="dish_order"><a href="#">Order Now</a></div> -->
-                           </div>
-                           <!-- Dish -->
-                           <div class="dish">
-                              <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
                                  <div class="dish_title">RIOJA CRIANZA </div>
                                  <div class="dish_price">2.8€ - 16.5€</div>
                               </div>
@@ -1061,6 +1053,35 @@
                               <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
                                  <div class="dish_title">VERMUT</div>
                                  <div class="dish_price">2.8€</div>
+                              </div>
+                              <!-- <div class="dish_order"><a href="#">Order Now</a></div> -->
+                           </div>
+                           <!-- Dish -->
+                           <div class="dish">
+                              <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
+                                 <div class="dish_title"><strong>VINOS ITALIANOS</strong></div>
+                                 <div class="dish_price"></div>
+                              </div>
+                              <!-- <div class="dish_order"><a href="#">Order Now</a></div> -->
+                           </div>
+                           <div class="dish">
+                              <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
+                                 <div class="dish_title">LAMBRUSCO TINTO Y BLANCO</div>
+                                 <div class="dish_price">3.9€ - 23.0€</div>
+                              </div>
+                              <!-- <div class="dish_order"><a href="#">Order Now</a></div> -->
+                           </div>
+                           <div class="dish">
+                              <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
+                                 <div class="dish_title">PRIMITIVO TINTO</div>
+                                 <div class="dish_price">19.90€</div>
+                              </div>
+                              <!-- <div class="dish_order"><a href="#">Order Now</a></div> -->
+                           </div>
+                           <div class="dish">
+                              <div class="dish_title_container d-flex flex-xl-row flex-column align-items-start justify-content-start">
+                                 <div class="dish_title">MONTALCINO TINTO</div>
+                                 <div class="dish_price">43.9€</div>
                               </div>
                               <!-- <div class="dish_order"><a href="#">Order Now</a></div> -->
                            </div>
