modifica icone delivery e whatsapp

--- a/about.html
+++ b/about.html
@@ -26,6 +26,7 @@
 <link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
 <link rel="stylesheet" type="text/css" href="styles/elements.css">
 <link rel="stylesheet" type="text/css" href="styles/elements_responsive.css">
+<link rel="stylesheet" type="text/css" href="styles/pulsing_icons.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -56,7 +57,7 @@
 							</ul>
 						</nav>
 						<div class="reservations_phone ml-auto">
-							<a href="https://wa.me/34624818116">
+							<a href="https://wa.me/34624818116" target="_blank" class="pulse-icon">
 							  <i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
 							</a>
 						  </div>
@@ -96,7 +97,8 @@
 				<li><a href="contact.html">contact</a></li>
 			</ul>
 		</div>
-		<div class="menu_reservations_phone ml-auto"><a href="https://wa.me/34624818116">
+		<div class="menu_reservations_phone ml-auto">
+			<a href="https://wa.me/34624818116" target="_blank" class="pulse-icon">
 			<i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
 		  </a></div>
 	</div>
