--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,7 @@
 <link rel="stylesheet" type="text/css" href="styles/logo.css">
 <link rel="stylesheet" type="text/css" href="styles/contact.css">
 <link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
+<link rel="stylesheet" type="text/css" href="styles/pulsing_icons.css">
 </head>
 <body>
 
@@ -53,7 +54,7 @@
 							</ul>
 						</nav>
 						<div class="reservations_phone ml-auto">
-							<a href="https://wa.me/34624818116">
+							<a href="https://wa.me/34624818116" target="_blank" class="pulse-icon">
 							  <i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
 							</a>
 						  </div>
