--- a/delivery.html
+++ b/delivery.html
@@ -25,6 +25,7 @@
 <link rel="stylesheet" type="text/css" href="styles/main_styles.css">
 <link rel="stylesheet" type="text/css" href="styles/responsive.css">
 <link rel="stylesheet" type="text/css" href="styles/logo.css">
+<link rel="stylesheet" type="text/css" href="styles/pulsing_icons.css">
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -57,8 +58,8 @@
 							</ul>
 						</nav>
 						<div class="reservations_phone ml-auto">
-							<a href="https://wa.me/34624818116">
-							  <i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
+							<a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank" class="pulse-icon">
+							  <i class="fa solid fa-bicycle" style="font-size:40px;color:white"></i>
 							</a>
 						  </div>
 					</div>
@@ -97,8 +98,8 @@
 				<li><a href="contact.html">contacto</a></li>
 			</ul>
 		</div>
-		<div class="menu_reservations_phone ml-auto"><a href="https://wa.me/34624818116">
-			<i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
+		<div class="menu_reservations_phone ml-auto"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank" class="pulse-icon">
+			<i class="fa solid fa-bicycle" style="font-size:40px;color:white"></i>
 		  </a></div>
 	</div>
 	
@@ -159,7 +160,7 @@
 				<div class="col">
 					<div class="reservations_content d-flex flex-column align-items-center justify-content-center">
 						<div class="res_stars page_subtitle">Chef Marco</div>
-						<div class="res_title">Hacer una reserva</div>
+						<div class="res_title">Ordena desde casa</div>
 						<div class="res_form_container">
 							<!-- <form action="#" id="res_form" class="res_form">
 								<div class="d-flex flex-sm-row flex-column align-items-center justify-content-start">
@@ -175,7 +176,7 @@
 								</div>
 								
 							</form> -->
-                            <a href="https://wa.me/34624818116" target="_blank"><button class="res_button">Hacer una reserva</button></a>
+                            <a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank"><button class="res_button">Ordena desde casa</button></a>
 						</div>
 					</div>
 				</div>
