--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <link rel="stylesheet" type="text/css" href="styles/main_styles.css">
       <link rel="stylesheet" type="text/css" href="styles/responsive.css">
       <link rel="stylesheet" type="text/css" href="styles/logo.css">
+      <link rel="stylesheet" type="text/css" href="styles/pulsing_icons.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
@@ -54,7 +55,7 @@
                            </ul>
                         </nav>
                         <div class="reservations_phone ml-auto">
-                           <a href="https://wa.me/34624818116">
+                           <a href="https://wa.me/34624818116" target="_blank" class="pulse-icon">
                            <i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
                            </a>
                         </div>
@@ -90,7 +91,8 @@
                   <li><a href="contact.html">contacto</a></li>
                </ul>
             </div>
-            <div class="menu_reservations_phone ml-auto"><a href="https://wa.me/34624818116">
+            <div class="menu_reservations_phone ml-auto">
+               <a href="https://wa.me/34624818116" target="_blank" class="pulse-icon">
                <i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
                </a>
             </div>
