--- a/menu.html
+++ b/menu.html
@@ -24,6 +24,7 @@
       <link rel="stylesheet" type="text/css" href="styles/logo.css">
       <link rel="stylesheet" type="text/css" href="styles/contact.css">
       <link rel="stylesheet" type="text/css" href="styles/contact_responsive.css">
+      <link rel="stylesheet" type="text/css" href="styles/pulsing_icons.css">
    </head>
    <body>
       <div class="super_container">
@@ -50,7 +51,7 @@
                            </ul>
                         </nav>
                         <div class="reservations_phone ml-auto">
-                           <a href="https://wa.me/34624818116">
+                           <a href="https://wa.me/34624818116" target="_blank" class="pulse-icon">
                            <i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
                            </a>
                         </div>
@@ -86,7 +87,8 @@
                   <li><a href="contact.html">contact</a></li>
                </ul>
             </div>
-            <div class="menu_reservations_phone ml-auto"><a href="https://wa.me/34624818116">
+            <div class="menu_reservations_phone ml-auto">
+               <a href="https://wa.me/34624818116" target="_blank" class="pulse-icon">
                <i class="fa fa-whatsapp" style="font-size:40px;color:white"></i>
                </a>
             </div>
