aggiunta nuovi files

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 				<li><a href="menu.html">menu</a></li>
 				<li><a href="delivery.html">Envío</a></li>
 				<li><a href="blog.html">blog</a></li>
-				<li><a href="contact.html">contact</a></li>
+				<li><a href="contact.html">contacto</a></li>
 			</ul>
 		</div>
 		<div class="menu_reservations_phone ml-auto">
@@ -106,7 +106,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/about.jpg" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/sobrenosotros.jpeg" data-speed="0.8" style="background-color: rgba(0, 0, 0, 0.5); /* Opacità del 50% */"></div>
 		<div class="home_container">
 			<div class="container">
 				<div class="row">
@@ -132,15 +132,15 @@
 			<div class="row">
 				<div class="col">
 					<div class="intro_content">
-						<div class="intro_subtitle page_subtitle">Algo nuevo</div>
-						<div class="intro_title"><h2>An Extraordinery Experience</h2></div>
+						<div class="intro_subtitle page_subtitle">Autenticidad Casera</div>
+						<div class="intro_title"><h2>Una experiencia extraordinaria</h2></div>
 						<div class="intro_text">
 							<p>Gracias por visitar nuestro sitio web. Esperamos haberle hecho agua la boca con nuestra deliciosa cocina italiana y española. Estamos deseando darle la bienvenida en nuestro restaurante y hacerle probar nuestros platos preparados con ingredientes de alta calidad. Para reservas o información, no dude en ponerse en contacto con nosotros por teléfono o correo electrónico, estaremos encantados de ayudarle. Suspendisse potenti. Vivamus luctus diam eu neque rutrum, vitae aliquet dolor venenatis. Nulla consequat fringilla massa.</p>
 						</div>
 					</div>
 					<div class="row">
 						<div class="col-lg-8">
-							<div class="intro_image"><img src="images/star.jpeg" alt="https://unsplash.com/@quanle2819"></div>
+							<div class="intro_image"><img src="images/saltimbocca.jpeg" alt="saltimbocca"></div>
 						</div>
 					</div>
 				</div>	
@@ -206,8 +206,8 @@
 			<div class="row">
 				<div class="col">
 					<div class="section_title_container">
-						<div class="section_subtitle page_subtitle">Algo nuevo</div>
-						<div class="section_title"><h1>Conoce a los Chefs</h1></div>
+						<div class="section_subtitle page_subtitle">Autenticidad Casera</div>
+						<div class="section_title"><h1>Conoce al Chef</h1></div>
 					</div>
 				</div>
 			</div>
@@ -226,7 +226,7 @@
 			<div class="row chefs_row row-eq-height">
 				
 
-				<div class="col-xl-3 col-md-6 chef_col d-flex flex-column mx-auto justify-content-center">
+				<!-- <div class="col-xl-3 col-md-6 chef_col d-flex flex-column mx-auto justify-content-center">
 					<div class="chef">
 						<div class="chef_image"><img src="images/chef_2.jpg" alt=""></div>
 						<div class="chef_content text-center">
@@ -246,7 +246,7 @@
 							<div class="chef_button ml-auto mr-auto trans_400"><a href="#">CONTACTO</a></div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
 				
 
