--- a/blog.html
+++ b/blog.html
@@ -102,7 +102,7 @@
 	<!-- Home -->
 
 	<div class="home">
-		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/blog.jpg" data-speed="0.8"></div>
+		<div class="parallax_background parallax-window" data-parallax="scroll" data-image-src="images/sobrenosotros.jpeg" data-speed="0.8" style="background-color: rgba(0, 0, 0, 0.5); /* Opacità del 50% */"></div>
 		<div class="home_container">
 			<div class="container">
 				<div class="row">
@@ -251,11 +251,11 @@
 				</div> -->
 
 			</div>
-			<div class="row load_more_row">
+			<!-- <div class="row load_more_row">
 				<div class="col">
 					<div class="button load_more_button ml-auto mr-auto trans_200"><a href="#">Load More</a></div>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 
