--- a/delivery.html
+++ b/delivery.html
@@ -132,7 +132,7 @@
 			<div class="row">
 				<div class="col">
 					<div class="intro_content">
-						<div class="intro_subtitle page_subtitle">Algo nuevo</div>
+						<div class="intro_subtitle page_subtitle">Autenticidad Casera</div>
 						<div class="intro_title"><h2>Una experiencia extraordinaria...</h2></div>
 						<div class="intro_text">
 							<p>Estamos encantados de presentarte nuestro exclusivo servicio de entrega a domicilio, llevando el distintivo sabor de nuestro restaurante directamente a tu casa. Con una amplia selección de platos expertamente preparados, desde nuestra cocina hasta tu mesa, garantizamos una experiencia culinaria sin igual. Ordenar es fácil y rápido a través de nuestro sitio web o la aplicación dedicada, y tu deliciosa experiencia será entregada con cuidado y puntualidad. La calidad es nuestra firma, y cada bocado refleja nuestro compromiso con ingredientes frescos y auténticas tradiciones culinarias. Tu seguridad es nuestra prioridad, con estrictos estándares de higiene garantizados en cada fase del proceso. Deja que A Casa Di Marco transforme cada comida en una experiencia extraordinaria, llevando el sabor sin límites directamente a tu puerta.</p>
