--- a/menu.html
+++ b/menu.html
@@ -47,7 +47,7 @@
                               <li><a href="menu.html">menu</a></li>
                               <li><a href="delivery.html">Envío</a></li>
                               <li><a href="blog.html">blog</a></li>
-                              <li><a href="contact.html">contact</a></li>
+                              <li><a href="contact.html">contacto</a></li>
                            </ul>
                         </nav>
                         <div class="reservations_phone ml-auto">
@@ -84,7 +84,7 @@
                   <li><a href="menu.html">menu</a></li>
                   <li><a href="delivery.html">Envío</a></li>
                   <li><a href="blog.html">blog</a></li>
-                  <li><a href="contact.html">contact</a></li>
+                  <li><a href="contact.html">contacto</a></li>
                </ul>
             </div>
             <div class="menu_reservations_phone ml-auto">
@@ -117,9 +117,9 @@
                <div class="row">
                   <div class="col">
                      <div class="section_title_container text-center">
-                        <div class="section_subtitle page_subtitle">Algo nuevo</div>
+                        <div class="section_subtitle page_subtitle">Autenticidad Casera</div>
                         <div class="section_title">
-                           <h1>Descubre nuestro Menú</h1>
+                           <h1>Descubre Nuestro Menú</h1>
                         </div>
                      </div>
                   </div>
@@ -1489,9 +1489,9 @@
                <div class="row">
                   <div class="col">
                      <div class="section_title_container">
-                        <div class="section_subtitle page_subtitle">Algo nuevo</div>
+                        <div class="section_subtitle page_subtitle">Autenticidad Casera</div>
                         <div class="section_title">
-                           <h1>Nuestro plato estrellaes</h1>
+                           <h1>Nuestro plato estrella</h1>
                         </div>
                      </div>
                   </div>
@@ -1505,21 +1505,21 @@
                               <div class="sig_content">
                                  <div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
                                  <div class="sig_name_container d-flex flex-row align-items-start justify-content-start">
-                                    <div class="sig_name">HUEVOS ROTOS CON JAMÓN IBÉRICO</div>
-                                    <div class="sig_price ml-auto">12.8€</div>
+                                    <div class="sig_name">RISOTTO CON CREMA DE CALABACIN Y PARMESANO</div>
+                                    <div class="sig_price ml-auto">11.5€</div>
                                  </div>
                                  <div class="sig_content_list">
                                     <ul class="d-flex flex-row align-items-center justify-content-start">
-                                       <li>Jamón Ibérico</li>
-                                       <li>Huevos</li>
-                                       <li>Aceite de oliva virgen extra</li>
+                                       <li>Guanciale</li>
+                                       <li>Crema de Calabacin</li>
+                                       <li>Parmesano</li>
                                     </ul>
                                  </div>
-                                 <div class="button sig_button trans_200"><a href="#">Order Now</a></div>
+                                 <div class="button sig_button trans_200"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank">Order Now</a></div>
                               </div>
                            </div>
                            <div class="col-lg-6 sig_col">
-                              <div class="sig_image"><img src="images/iberico.png" alt=""></div>
+                              <div class="sig_image"><img src="images/risotto.jpeg" alt="risotto"></div>
                            </div>
                         </div>
                      </div>
@@ -1531,22 +1531,21 @@
                                  <div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
                                  <div class="sig_name_container d-flex flex-row align-items-start justify-content-start">
                                     <div class="sig_name">Lasagna</div>
-                                    <div class="sig_price ml-auto">10.5€</div>
+                                    <div class="sig_price ml-auto">11.5€</div>
                                  </div>
                                  <div class="sig_content_list">
                                     <ul class="d-flex flex-row align-items-center justify-content-start">
-                                       <li>Tomate</li>
-                                       <li>Cebolla</li>
-                                       <li>Zanahoria</li>
-                                       <li>Apio</li>
-                                       <li>Ajo</li>
+                                       <li>Ragù</li>
+                                       <li>Besamela</li>
+                                       <li>Mozzarella</li>
+                                       <li>Parmesano</li>
                                     </ul>
                                  </div>
-                                 <div class="button sig_button trans_200"><a href="#">Order Now</a></div>
+                                 <div class="button sig_button trans_200"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank">Order Now</a></div>
                               </div>
                            </div>
                            <div class="col-lg-6 sig_col">
-                              <div class="sig_image"><img src="images/lasagna.jpg" alt=""></div>
+                              <div class="sig_image"><img src="images/lasagna2.jpeg" alt="lasagna"></div>
                            </div>
                         </div>
                      </div>
@@ -1557,22 +1556,21 @@
                               <div class="sig_content">
                                  <div class="rating_r sig_rating rating_r_5"><i></i><i></i><i></i><i></i><i></i></div>
                                  <div class="sig_name_container d-flex flex-row align-items-start justify-content-start">
-                                    <div class="sig_name">Tiramisu</div>
-                                    <div class="sig_price ml-auto">5.9€</div>
+                                    <div class="sig_name">TARTA DE QUESO CASERA</div>
+                                    <div class="sig_price ml-auto">5.5€</div>
                                  </div>
                                  <div class="sig_content_list">
                                     <ul class="d-flex flex-row align-items-center justify-content-start">
-                                       <li>Cacao</li>
-                                       <li>Mascarpone</li>
+                                       <li>Nata</li>
+                                       <li>Queso</li>
                                        <li>Huevos</li>
-                                       <li>Café</li>
                                     </ul>
                                  </div>
-                                 <div class="button sig_button trans_200"><a href="#">Order Now</a></div>
+                                 <div class="button sig_button trans_200"><a href="https://www.just-eat.es/restaurants-a-casa-di-marco-zaragoza/menu/?utm_source=button&utm_medium=tr-activation&utm_campaign=ACasaDiMarcoZaragoza" target="_blank">Order Now</a></div>
                               </div>
                            </div>
                            <div class="col-lg-6 sig_col">
-                              <div class="sig_image"><img src="images/tiramisu.png" alt=""></div>
+                              <div class="sig_image"><img src="images/cheesecake.jpeg" alt=""></div>
                            </div>
                         </div>
                      </div>
